# test-cabal

./: cabal.project  flake.nix  hie.yaml  test-cabal.cabal
app/: Main.hs
scripts/: check.sh  format.sh  lint.sh
tests/: Spec.hs
