cabal-version:      2.4
name:               test-cabal
version:            0.1.0.0
author:             Dmitrii Skurihin
maintainer:         dmitrii.sk@gmail.com
extra-source-files: CHANGELOG.md

executable test-cabal
    main-is:          Main.hs
    build-depends:    base ^>=4.14.1.0, Cabal, cabal-install-parsers
    hs-source-dirs:   app
    default-language: Haskell2010
